Initial commit: Podcast Pulse with backend, frontend, and React setup

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,10 @@ __pycache__/
 
 # Ignore database files (optional, recreate on Vercel)
 *.db
+__pycache__/
+*.pyc
+.env
+.venv/
+node_modules/
+*.txt
+downloads/
