--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,13 @@
-# Ignore downloaded files (uncomment if you want to ignore locally, but leave for Render)
-#downloads/
-
-# Ignore Python cache
+# Python
 __pycache__/
 *.pyc
-
-# Ignore virtual environment
-.venv/
-.venv/
-
-# Ignore database files (optional, recreate on Vercel)
 *.db
+*.sqlite3
+downloads/
+backend/downloads/
+frontend-react/downloads/
 
-# Ignore environment variables
-.env
-
-# Ignore Node.js modules
-node_modules/
-
-# Allow requirements.txt (remove *.txt or exclude specific .txt files)
-# *.txt
+# Misc
+test.html
+*.log
+.venv/
